--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -349,6 +349,14 @@
     </svg>
 
   </div>
+  <!-- Question-->
+  <div class="container">
+    <div class="row no-gutters">
+      <div class="col-md-12">
+        <app-test></app-test>
+      </div>
+    </div>
+  </div>
 
   <!-- Resources -->
   <h2>Resources</h2>
